--- a/style.css
+++ b/style.css
@@ -76,8 +76,30 @@ footer a {
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) and (min-width:530px) {
     .card button {
         margin-left: 260px;
+    }
+
+    #promocoes .card button {
+        margin-left: 160px;
+    }
+}
+
+@media screen and (max-width: 529px) {
+    #promocoes .card-footer {
+        font-size: 12px;
+    }
+
+    #promocoes .card button {
+        margin-left: 20px;
+    }
+
+    .card button {
+        margin-left: 10px;
+    }
+
+    footer {
+        font-size: 10px;
     }
 }
